# Ai_quiz_maker

./: main.py  pyproject.toml
